<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:background="@drawable/rounded_box"
    android:backgroundTint="@android:color/white"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_height="85dp"
        android:layout_width="85dp"
        app:civ_border_width="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        app:civ_border_color="@android:color/darker_gray"
        android:src="@drawable/placeholder"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_image"
        android:gravity="center"/>

    <EditText
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@android:color/white"
        android:elevation="1dp"
        android:hint="@string/category_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/add_btn"
        android:background="@drawable/rounded_corners"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>


</LinearLayout>